--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,10 +15,11 @@
 @import "./componets/button";
 
 // Layout
-
+@import "./layout/grid";
 
 // Pages
 @import "./pages/home";
+@import "./pages/nav"
 
 
 // Vendors
