--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,8 @@ body {
   box-sizing: border-box; }
 
 body {
-  font-size: 2rem; }
+  font-size: 2rem;
+  font-family: 'Inria Serif', serif; }
 
 a {
   text-decoration: none;
@@ -26,6 +27,9 @@ a {
   width: 1025px;
   margin: 0 auto; }
 
+.container-fluid {
+  width: 100vw; }
+
 .nav {
   background-color: #4c59a1;
   color: #fff; }
@@ -37,8 +41,37 @@ a {
     list-style: none;
     text-decoration: none; }
   .nav__input {
-    padding-left: 45px;
-    padding: 5px 20px;
+    position: relative;
+    padding-left: 35px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 40px;
     border: none;
     font-size: 2rem;
     border-radius: 20px; }
+  .nav__logo-text {
+    font-size: 2.5rem; }
+  .nav__form--icon {
+    padding-left: 5px;
+    position: absolute;
+    top: 5.5%;
+    z-index: 22;
+    color: #333; }
+
+.word-meaning {
+  padding-top: 20px; }
+
+.word {
+  font-size: 8rem;
+  font-weight: 300;
+  font-family: 'Inria Serif';
+  word-spacing: 8px; }
+
+.word__describe {
+  padding-top: 20px;
+  width: 50%;
+  line-height: 1.5;
+  font-size: 2.5rem;
+  color: #142e4b;
+  font-weight: 300;
+  font-family: 'Inria Serif'; }
