--- a/scss/pages/_nav.scss
+++ b/scss/pages/_nav.scss
@@ -12,10 +12,25 @@
     }
 
     &__input {
-        padding-left: 45px;
-        padding: 5px 20px;
+        position: relative;
+        padding-left: 35px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-right: 40px;
         border: none;
         font-size: 2rem;
         border-radius: 20px;
+    }
+
+    &__logo-text {
+        font-size: 2.5rem;
+    }
+
+    &__form--icon {
+        padding-left: 5px;
+        position: absolute;
+        top: 5.5%;
+        z-index: 22;
+        color: #333;
     }
 }
